--- a/nav.css
+++ b/nav.css
@@ -1,53 +1,112 @@
+*{
+  box-sizing: border-box;
+  position: relative;
+}
+
 body {
-    margin: 0;
-    padding: 0;
-    /* background: #333; */
-    font-family: Arial, sans-serif;
-  }
-  
-  .nav {
-    display: flex;
-    gap: 1rem;
-    list-style: none;
-    padding: 1rem;
-    margin: 0;
-    background: #444;
-    justify-content: center;
-  }
-  
-  .nav li {
-    color: #fff;
-    display: grid;
-    place-content: center;
-    margin: 0;
-    position: relative; /* 需要為 ::before 設置相對定位的父元素 */
-  }
-  
-  .nav .menu {
-    color: #fff;
-    text-decoration: none;
-    position: relative;
-    padding: 0.5rem 1rem;
-    display: block;
-  }
-  
-  .nav .menu::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background: #fff;
-    border-radius: 5px;
-    transform: scaleX(0);
-    transition: all 0.5s ease; /* 修正 transition duration */
-    bottom: 0;
-    left: 0;
-  }
-  
-  .nav .menu:hover::before {
-    transform: scaleX(1);
-  }
-  
-  .c_center {
-    text-align: center;
-  }
+  margin: 0;
+  padding: 0;
+  /* background: #333; */
+  font-family: Arial, sans-serif;
+}
+h2{
+  font-size: 35px;
+  line-height: 40px;
+}
+
+.nav {
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+  padding: 1rem;
+  margin: 0;
+  background: #444;
+  justify-content: center;
+}
+
+.nav li {
+  color: #fff;
+  display: grid;
+  place-content: center;
+  margin: 0;
+  position: relative; /* 需要為 ::before 設置相對定位的父元素 */
+}
+
+.nav .menu {
+  color: #fff;
+  text-decoration: none;
+  position: relative;
+  padding: 0.5rem 1rem;
+  display: block;
+}
+
+.nav .menu::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  border-radius: 5px;
+  transform: scaleX(0);
+  transition: all 0.5s ease; /* 修正 transition duration */
+  bottom: 0;
+  left: 0;
+}
+
+.nav .menu:hover::before {
+  transform: scaleX(1);
+}
+
+.c_center {
+  text-align: center;
+}
+
+/* add_record */
+.container {
+  margin: 0 auto;
+  padding: 0 16px;
+  text-align: center;
+
+}
+.row{
+  margin: 0 20px;
+}
+.row:after{
+  content: ' ';
+  display: block;
+  clear: both;
+}
+.from{
+  display: inline-block;
+  text-align: left;
+
+  border: 1px solid black;
+  border-radius: 30px;
+  margin-top: 50px;
+
+  background-color: #ffffff53;
+  backdrop-filter: blur(10px);
+
+  box-shadow: 5px 5px #000000;
+}
+.title{
+  font-size: 20px;
+  line-height: 30px;
+  margin-bottom: 10px;
+  display: inline;
+}
+.button{
+  background: #8d8d8d;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px ;
+  box-shadow: 2px 2px #000000;
+
+  transition: all 0.3s ease;
+}
+.button:hover{
+  background: #636363;
+}
