New features and fixes
修正日曆排版，修正下一頁只會顯示ALL的Bug，新增忘記密碼按鈕

--- a/calendar.css
+++ b/calendar.css
@@ -1,27 +1,30 @@
-body {
-    /* display: flex;
-    justify-content: center;
-    align-items:start;
-    height: 100vh;
-    margin: 0; */
+*{
     margin: 0;
     padding: 0;
-    /* display: flex; */
-    justify-content: center; /* 水平居中 */
-    align-items: center;    /* 垂直居中 */
+    box-sizing: border-box;
+
+}
+body{
+    font-family: Arial, sans-serif;
 }
 
+.container{
+    margin: 0 auto;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .calendar {
-    /* display: flex; */
     width: 100%;
     max-width: 400px;
-    font-family: Arial, sans-serif;
     text-align: center;
+
     background-color: #f2f2f2;
+
     padding: 10px;
-    /* margin: 0; */
     border-radius: 5px;
-    box-sizing: border-box;
 }
 
 .calendar-header {
@@ -53,22 +56,25 @@ body {
     color: white;
     border-radius: 50%;
 }
+.mButton{
+    background-color: #ffa500;
+    color: rgb(0, 0, 0);
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 5px 7px;
+    margin: 5px;
+    cursor: pointer;
+}
 
 .date-info {
     margin-top: 10px;
     font-weight: bold;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
     .calendar {
         max-width: 300px;
     }
-
-    .calendar-header {
-        flex-direction: column;
-        align-items: stretch;
-    }
-
     .calendar-header div {
         margin-top: 10px;
     }
