--- a/nav.css
+++ b/nav.css
@@ -120,3 +120,74 @@ h2 {
 .container .button:hover {
   background: #636363;
 }
+@media screen and (max-width:520px){
+  .navbar .nav{
+      position: fixed;
+      left: -100%;
+      top :0;
+      width: 100%;
+      height: 100%;
+      background-color:rgba(0, 0, 0, 0.459);
+      z-index: 500;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      opacity: 0;
+      visibility:hidden;
+      transition: all 0.3s;
+  }
+  .navbar .nav.active{
+      opacity: 1;
+      visibility:visible;
+      left: 0;
+  }
+  .navbar .nav .menu{
+      text-align: center;
+      padding: 16px;
+  }
+}
+.navbar .menu-toggle{
+  width: 48px;
+  height: 48px;
+  float: right;
+  margin-top: 8px;
+  display: none;
+  z-index: 600;
+}
+@media screen and (max-width:520px){
+  .navbar .menu-toggle{
+      display: inline-block;
+  }
+}
+.navbar .menu-toggle span{
+  display: block;
+  width: 32px;
+  height: 2px;
+  background-color: rgb(183, 0, 0);
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,0);
+  transition: all 0.3s;
+}
+.navbar .menu-toggle span:nth-child(1){
+  top:12px;
+}
+.navbar .menu-toggle.active span:nth-child(1){
+  top:50%;
+  transform: translate(-50%,-50%) rotate(45deg);
+}
+.navbar .menu-toggle span:nth-child(2){
+  top:22px;
+}
+.navbar .menu-toggle.active span:nth-child(2){
+  opacity: 0;
+}
+.navbar .menu-toggle span:nth-child(3){
+  top:32px;
+}
+.navbar .menu-toggle.active span:nth-child(3){
+  top:50%;
+  transform: translate(-50%,-50%) rotate(-45deg);
+}
