--- a/CSS/manage.css
+++ b/CSS/manage.css
@@ -27,8 +27,9 @@ form{
     width: 80%;
     padding: 10px;
 }
-.title{
-    font-size: 50px;
+.jf_title{
+    /* font-size: 50px; */
+    margin: 10px auto;
     color: #000;
     text-align: center;
     font-style:italic;
