--- a/CSS/IntroductionPage_style.css
+++ b/CSS/IntroductionPage_style.css
@@ -88,7 +88,7 @@ header {
     margin-top: 2%;
 }
 
-header #tittle {
+header #title {
     font-size: 350%;
     width: 100%;
 }
@@ -112,19 +112,19 @@ header #groupMbr {
     width: 100%;
 }
 
-#motivation .tittles {
+#motivation .titles {
     margin-bottom: 2%;
     border-bottom: 2px solid black;
     padding-bottom: 1%;
     width: 85%;
 }
 
-.tittles {
+.titles {
     text-align: left;
     font-size: 250%;
 }
 
-#motivation .mot-tittle {
+#motivation .mot-title {
     margin-top: 2%;
     margin-bottom: 1%;
     width: 85%;
@@ -158,7 +158,7 @@ main {
     flex-wrap: wrap;
 }
 
-main .tittles {
+main .titles {
     margin-top: 5%;
     margin-bottom: 5%;
     text-align: center;
@@ -180,7 +180,7 @@ main #main-login {
     margin-left: 6%;
 }
 
-main #main-login .loginTittle {
+main #main-login .loginTitle {
     font-size: 250%;
     width: 95%;
     margin-bottom: 5%;
@@ -258,7 +258,7 @@ main .main-features {
     flex-wrap: wrap;
 }
 
-#technology .tittles {
+#technology .titles {
     margin-bottom: 5%;
 }
 
@@ -310,7 +310,7 @@ main .main-features {
     flex-wrap: wrap;
 }
 
-#divisionTab .tittles {
+#divisionTab .titles {
     text-align: center;
     width: 100%;
     margin-bottom: 4%;
